# openaq-project

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: _secrets_example.py
dash_app/: config.py  run.py
dash_app/assets/: style.css
lambda/: lambda_function.py
notebooks/: exploration.ipynb
src/openaqtools/: ddb.py  geo.py  sqs.py
