[tool.poetry]
name = "openaq-project"
version = "0.1.0"
description = ""
authors = ["Stefan <stefanvr@gmail.com>"]
readme = "README.md"
packages = [{include = "openaq_project"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
